@@ -1,5 +1,10 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+CVS ktigcc-1-branch (2007-07-02):
+
+* Ctrl+Return now works for "Open file at cursor" (not just Ctrl+Numpad Enter)
+
+
 KTIGCC 1.07 (2007-04-03):
 
 * Added a full changelog (generated from CVS logs).
